--- a/jquery.tag-editor.css
+++ b/jquery.tag-editor.css
@@ -12,20 +12,17 @@
 .tag-editor input {
     vertical-align: inherit; border: 0; outline: none; padding: 0; margin: 0; cursor: text;
     font-family: inherit; font-weight: inherit; font-size: inherit; font-style: inherit;
-    -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; background: none;
+    box-shadow: none; background: none;
 }
 
 /* tag style */
 .tag-editor .tag-editor-tag {
-    padding-left: 5px; color: #46799b; background: #e0eaf1; white-space: nowrap; overflow: hidden; cursor: pointer;
-    border-radius: 2px 0 0 2px; -moz-border-radius: 2px 0 0 2px; -webkit-border-radius: 2px 0 0 2px;
+    padding-left: 5px; color: #46799b; background: #e0eaf1; white-space: nowrap;
+    overflow: hidden; cursor: pointer; border-radius: 2px 0 0 2px;
 }
 
 /* delete icon */
-.tag-editor .tag-editor-delete {
-    background: #e0eaf1; cursor: pointer; padding-right: 5px;
-    border-radius: 0 2px 2px 0; -moz-border-radius: 0 2px 2px 0; -webkit-border-radius: 0 2px 2px 0;
-}
+.tag-editor .tag-editor-delete { background: #e0eaf1; cursor: pointer; padding-right: 5px; border-radius: 0 2px 2px 0; }
 .tag-editor .tag-editor-delete i {
     display: inline-block; width: 7px; height: 7px; vertical-align: middle; background: url(delete.png) 0 0 no-repeat;
     position: relative; top: -1px;
