Fixed tabindex navigation. The tabindex attribute does not need to be set manually any more.

--- a/jquery.tag-editor.css
+++ b/jquery.tag-editor.css
@@ -14,6 +14,8 @@
     font-family: inherit; font-weight: inherit; font-size: inherit; font-style: inherit;
     box-shadow: none; background: none;
 }
+/* hide original input field or textarea visually to allow tab navigation */
+.tag-editor-hidden-src { position: absolute; left: -99999px; }
 /* hide IE10 "clear field" X */
 .tag-editor ::-ms-clear { display: none; }
 
