--- a/jquery.tag-editor.css
+++ b/jquery.tag-editor.css
@@ -26,11 +26,14 @@
 }
 
 /* delete icon */
-.tag-editor .tag-editor-delete { background: #e0eaf1; cursor: pointer; padding-right: 5px; border-radius: 0 2px 2px 0; }
-.tag-editor .tag-editor-delete i {
-    display: inline-block; width: 7px; height: 7px; vertical-align: middle; background: url(delete.png) 0 0 no-repeat;
-    position: relative; top: -1px;
+.tag-editor .tag-editor-delete { background: #e0eaf1; cursor: pointer; border-radius: 0 2px 2px 0; padding-left: 3px; padding-right: 3px; }
+.tag-editor .tag-editor-delete i:before {
+    display: inline-block; width: 10px; height: 7px; vertical-align: middle;
+    position: relative; top: -9px;
+    font-size: 16px; color: #8ba7ba; content: "×";
 }
+.tag-editor .tag-editor-delete:hover i:before {  color: #d65454; }
+
 .tag-editor .tag-editor-delete:hover i { background-position: 0 -14px; }
 .tag-editor .tag-editor-tag.active+.tag-editor-delete,
 .tag-editor .tag-editor-tag.active+.tag-editor-delete i { background: none; cursor: text; }
