--- a/jquery.tag-editor.css
+++ b/jquery.tag-editor.css
@@ -35,7 +35,8 @@
 .tag-editor .tag-editor-tag.active { background: none !important; }
 
 /* jQuery UI autocomplete - code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css */
-.ui-autocomplete { position: absolute; top: 0; left: 0; cursor: default; font-size: 14px; }
+.ui-autocomplete { position: absolute; top: 0; left: 0; cursor: default; font-size: 14px; max-height: 300px; overflow: auto;}
+/* max-height is used to limit the list length and autoflow is to make the list scrollable */
 .ui-front { z-index: 9999; }
 .ui-menu { list-style: none; padding: 1px; margin: 0; display: block; outline: none; }
 .ui-menu .ui-menu-item a { text-decoration: none; display: block; padding: 2px .4em; line-height: 1.4; min-height: 0; /* support: IE7 */ }
